fix: list-module__item-menu under z-index of lazyImageLoader component

--- a/frontend/src/pages/Overview/OverviewPage.css
+++ b/frontend/src/pages/Overview/OverviewPage.css
@@ -86,6 +86,7 @@
             display: flex;
             align-items: flex-end;
             justify-content: center;
+            z-index: 100;
         }
 
             .list-module__item-menu {
